syntax = "proto3";

option csharp_namespace = "gRPC.Server";

package file;

service File {
  rpc ExplorePath (PathRequest) returns (PathReply);
}

message PathRequest {
  string path = 1;
  string directory_name = 2;
}

message PathReply {
  string path = 1;
  repeated string directory_names = 2;
  repeated string file_names = 3;
}
